2009-12-08  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by Darin Adler.

        CSS Counter Nesting still does not work according to the spec.
        https://bugs.webkit.org/show_bug.cgi?id=31723

        * fast/css/counters/nesting-expected.txt: Added.
        * fast/css/counters/nesting.html: Added.
        This test tests compliance with the CSS2.1 counter scoping and nesting rules.
2009-12-08  Carol Szabo  <carol.szabo@nokia.com>

        Reviewed by Darin Adler.

        CSS Counter Nesting still does not work according to the spec.
        https://bugs.webkit.org/show_bug.cgi?id=31723

        Test: fast/css/counters/nesting.html

        * rendering/RenderCounter.cpp:
        (WebCore::findPlaceForCounter):
        Replaced the faulty counter insertion algorithm with one that works.

Canonical link: https://commits.webkit.org/43276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51851 268f45cc-cd09-0410-ab3c-d52691b4dbfc